--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.3",
+    "axios": "^0.18.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-picker": "^0.28.1",
-    "react-navigation": "^3.9.0"
+    "react-navigation": "^3.9.0",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
